--- a/styles/globals.css
+++ b/styles/globals.css
@@ -53,6 +53,18 @@ a {
   -webkit-backdrop-filter: blur(15px);
   border: 1px solid rgba(243, 243, 243, 0.3);
 }
+.blurBackground{
+  pointer-events: none;
+  background: rgba(255, 255, 255, 0.1);
+  box-shadow: 0 10px 20px rgba(0, 0, 0, .1);
+  backdrop-filter: blur(10px);
+  -webkit-filter: blur(5px);
+  -moz-filter: blur(5px);
+  -o-filter: blur(5px);
+  -ms-filter: blur(5px);
+  border: 1px solid rgba(255, 255, 255, 0.25);
+  border-radius: 10px;
+}
 
 .button{
   background: transparent;
